; ModuleID = '/home/carl/AnghaBench/lede/package/network/services/ead/src/tinysrp/extr_t_truerand.c_interrupt.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/services/ead/src/tinysrp/extr_t_truerand.c_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@count = common dso_local global i64 0, align 8
@done = common dso_local global i32 0, align 4
@SIGALRM = common dso_local global i32 0, align 4
@env = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interrupt() #0 {
  %1 = load i64, i64* @count, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @done, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @done, align 4
  br label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @SIGALRM, align 4
  %8 = call i32 @signal(i32 %7, void (...)* bitcast (void ()* @interrupt to void (...)*))
  %9 = call i32 (...) @tick()
  br label %10

10:                                               ; preds = %6, %3
  ret void
}

declare dso_local i32 @signal(i32, void (...)*) #1

declare dso_local i32 @tick(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
